--- a/src/App.css
+++ b/src/App.css
@@ -28,8 +28,9 @@
 }
 
 #map {
-    width: 500px;
-    height: 500px;
+    -webkit-animation: fadein 1s;
+    width: 400px;
+    height: 400px;
     margin: auto;
 }
 
@@ -42,25 +43,71 @@
     padding: 15px
 }
 
-.marker p{
+.marker p {
     display: none;
 }
 
-.marker:hover p{
+.marker:hover p {
+    -webkit-animation: fadein 1s;
+    color: white;
+    padding: 5px;
     position: relative;
-    bottom:40px;
-    left:15px;
+    bottom: 40px;
+    left: 15px;
     font-size: 15px;
     display: block;
-    background-color: #F0F0F0;
-    min-width:110px;
+    background-color: #2bb0d1;
+    width: 150px;
+    max-width: 200px;
     z-index: 14;
-    border:1px solid #94989D;
-    border-radius: 5px;
+    box-shadow: 10px 10px 5px grey;
+    border-radius: 2px;
     font-family: sans-serif;
 }
-
-#linechart{
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+#linechart {
     width: 500px;
     margin: auto;
+}
+
+table{
+    width: 300px;
+    margin:auto;
+}
+
+#search {
+    width: 100%;
+    margin-top: 50px;
+}
+#search input[type=text]{
+    height:35px;
+    font-size: 20px;
+    margin-right: 20px;
+}
+
+#graph{
+    width:600px;
+    margin:auto;
+}
+
+.map-and-Info{
+    width:900px;
+    margin: auto;
+    position: relative;
+    left:120px;
+}
+
+.floatLeft{
+    float:left;
+}
+
+.description-popup{
+    /*width:600px;*/
+    background-color: black;
+    color:white;
+    z-index: 15;
+    position: absolute;
 }
