--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,14 @@
 .App {
     text-align: center;
 }
+
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
 }
 
-#background{
+#background {
     background-color: #252830;
     width: 100%;
     z-index: -5;
@@ -17,7 +18,6 @@ body {
     background-position: center center;
     background-attachment: fixed;
 }
-
 .App-logo {
     animation: App-logo-spin infinite 20s linear;
     height: 80px;
@@ -77,7 +77,7 @@ body {
 }
 
 .marker:hover p {
-    -webkit-animation: fadein 1s;
+    -webkit-animation: fadein 0.5s;
     color: white;
     padding: 5px;
     position: relative;
@@ -108,6 +108,7 @@ body {
     color: white;
     position: relative;
     left: 40px;
+    margin-top: 12px;
 }
 
 table {
@@ -139,7 +140,14 @@ table td, th {
 
 table th {
     color: white !important;
-    margin-right: 20px !important;
+    float: left;
+    margin-left: 10px !important;
+}
+
+table td {
+    color: white !important;
+    float: right;
+    margin-right: 10px;
 }
 
 #search {
@@ -157,10 +165,10 @@ table th {
 
 #graph {
     width: 600px;
+    height: 250px;
     margin: auto;
     margin-top: 100px;
-    margin-bottom:100px;
-
+    margin-bottom: 100px;
 }
 
 .map-and-Info {
@@ -198,10 +206,143 @@ table th {
     }
 }
 
-#hr{
-    width:730px;
-    margin:auto;
+#hr {
+    width: 730px;
+    margin: auto;
     position: relative;
-    left:17px;
+    top: 20px;
+    border-top: 1px solid grey;
+    left: 17px;
     margin-top: 100px;
+}
+
+button {
+    background-color: #2BB0D1 !important;
+    border: 2px solid #2BB0D1 !important;
+    color: white !important;
+}
+
+button:hover {
+    border: 2px solid #2BB0D1 !important;
+    background-color: white !important;
+    color: #2BB0D1 !important;
+}
+
+
+
+@media (max-width: 900px) {
+    .map-and-Info {
+        width: 100%;
+        height: 800px;
+        margin: auto;
+    }
+    table {
+        clear: left;
+        background-color: #222222 !important;
+        width: 100% !important;
+        height: 295px !important;
+        margin-right: 90px;
+        position: relative;
+        left: 0;
+    }
+    table tr:hover {
+        background-color: #222222 !important;
+    }
+    table td button {
+        position: relative;
+        width: 180px !important;
+    }
+
+    table td{
+        float: right;
+        margin-right: 30px;
+    }
+
+    table td, th {
+        position: relative;
+        top: 20px;
+    }
+    table th {
+        color: white !important;
+        margin-left: 30px !important;
+        float: left;
+    }
+    .map {
+        clear: left;
+        -webkit-animation: fadein 1s;
+        width: 100%;
+        height: 350px;
+        position: relative;
+        top: 12px;
+        z-index: 1;
+        left: 1px;
+    }
+    .temp{
+        width:100%;
+        margin-left: 0;
+        position: relative;
+        left:0;
+    }
+    .floatLeft{
+        width:100%;
+    }
+    #hr{
+        display: none;
+    }
+    #graph {
+        width: 100% !important;
+        height: 250px !important;
+        margin: auto;
+        margin-top: 100px;
+        margin-bottom: 100px;
+    }
+    .description-popup {
+        /*width:600px;*/
+        -webkit-animation: fadein 1s;
+        box-shadow: 10px 10px 5px grey;
+        max-width: 500px;
+        padding: 10px;
+        border-radius: 3px;
+        background-color: #2bb0d1;
+        color: white;
+        z-index: 15;
+        position: absolute;
+        left: 200px;
+        margin-right: 200px;
+    }
+}
+
+@media (max-width: 700px) {
+    .description-popup {
+        /*width:600px;*/
+        -webkit-animation: fadein 1s;
+        box-shadow: 10px 10px 5px grey;
+        max-width: 600px;
+        min-width: 400px;
+        padding: 10px;
+        border-radius: 3px;
+        background-color: #2bb0d1;
+        color: white;
+        z-index: 15;
+        position: absolute;
+        left: 100px;
+        margin-right: 121px;
+    }
+}
+
+@media (max-width: 600px) {
+    .description-popup {
+        /*width:600px;*/
+        -webkit-animation: fadein 1s;
+        box-shadow: 10px 10px 5px grey;
+        width:100%;
+        padding: 10px;
+        border-radius: 3px;
+        background-color: #2bb0d1;
+        color: white;
+        z-index: 15;
+        position: absolute;
+        left:0px;
+        margin-right: 151px;
+    }
 }
