--- a/src/App.css
+++ b/src/App.css
@@ -187,7 +187,8 @@ table td {
     /*width:600px;*/
     -webkit-animation: fadein 1s;
     box-shadow: 10px 10px 5px grey;
-    max-width: 600px;
+    margin:auto;
+    width: 600px;
     padding: 10px;
     border-radius: 3px;
     background-color: #2bb0d1;
@@ -229,7 +230,7 @@ button:hover {
     color: #2BB0D1 !important;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 800px) {
     .map-and-Info {
         width: 100%;
         height: 800px;
@@ -295,52 +296,17 @@ button:hover {
     }
     .description-popup {
         /*width:600px;*/
+        box-shadow: 0px 0px 0px 0px grey;
         -webkit-animation: fadein 1s;
-        box-shadow: 10px 10px 5px grey;
-        max-width: 500px;
-        padding: 10px;
-        border-radius: 3px;
-        background-color: #2bb0d1;
-        color: white;
-        z-index: 15;
-        position: absolute;
-        left: 200px;
-        margin-right: 200px;
-    }
-}
-
-@media (max-width: 700px) {
-    .description-popup {
-        /*width:600px;*/
-        -webkit-animation: fadein 1s;
-        box-shadow: 10px 10px 5px grey;
-        max-width: 600px;
-        min-width: 400px;
-        padding: 10px;
-        border-radius: 3px;
-        background-color: #2bb0d1;
-        color: white;
-        z-index: 15;
-        position: absolute;
-        left: 100px;
-        margin-right: 121px;
-    }
-}
-
-@media (max-width: 600px) {
-    .description-popup {
-        /*width:600px;*/
-        -webkit-animation: fadein 1s;
-        box-shadow: 10px 10px 5px grey;
         width: 100%;
         padding: 10px;
+        margin:auto;
         border-radius: 3px;
         background-color: #2bb0d1;
         color: white;
         z-index: 15;
         position: absolute;
         left: 0px;
-        margin-right: 151px;
     }
 }
 
